# Learning

./: .gitignore  test.ipynb
Algorithms/: binary_search.ipynb  binary_tree_invert.ipynb  (+7 more)
FastAPI/fastapi_full_course_ssali_jonathan/: hello.py  main.py  main_books.py  notes.md  notes.txt  pyproject.toml
FastAPI/fastapi_full_course_ssali_jonathan/restfox/: .gitignore  create book.json  get headers.json  greet optional params.json  greet path and query param.json  greet path param.json  greet query param.json  hello world.json  restfox.json
FastAPI/fastapi_full_course_ssali_jonathan/restfox/books fastapi/: _.json  create book.json  delete a book.json  get a book.json  get all books.json  update a book.json
FastAPI/fastapi_full_course_ssali_jonathan/src/: __init__.py  config.py
FastAPI/fastapi_full_course_ssali_jonathan/src/books/: book_data.py  routes.py  schemas.py  service.py
FastAPI/fastapi_full_course_ssali_jonathan/src/db/: main.py
FastAPI/fastapi_supabase/: demo.py  notes.md  pyproject.toml
FastAPI/fastapi_supabase/employee_repo/: auth.py  database.py  forms.py  main.py
FastAPI/fastapi_supabase/employee_repo/routes/: auth_routes.py  employee_routes.py
FastAPI/fastapi_supabase/employee_repo/static/: styles.css
FastAPI/fastapi_supabase/employee_repo/templates/: add_employee.html  base.html  edit_employee.html  index.html  login.html  signup.html
hf_audio_course/: 01_audio_data.ipynb  02_intro_to_audio_apps.ipynb  03_transformer_architectures_for_audio.ipynb  README.md  pyproject.toml
llms/langgraph_course/: .gitignore  module_01_intro.ipynb  module_02_state_memory.ipynb  module_03_ux_and_human-in-the-loop.ipynb  pyproject.toml  self_rag_agent.ipynb
llms/langgraph_course/deep_agents_w_langgraph/: 0_create_agent.ipynb  temp.ipynb  utils.py
llms/langgraph_course/deep_research_w_langgraph/deep_research_from_scratch/: prompts.py
llms/langgraph_course/deep_research_w_langgraph/notebooks/: 01_scope.ipynb
llms/langgraph_course/example01_simple_agent/: langgraph.json
llms/langgraph_course/module-4_Build_your_Assistant/: 01_parallelization.ipynb  02_sub-graphs.ipynb  03_map-reduce.ipynb  04_research_assistant.ipynb
llms/langgraph_course/module-5/: 01_langgraph_store.ipynb
(+251 files in other folders)
