[project]
name = "langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "grandalf>=0.8",
    "langchain==1.0.0a6",
    "langchain-community>=0.3.27",
    "langchain-core==1.0.0a4",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.11",
    "langchainhub>=0.1.21",
    "langgraph==1.0.0a1",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.3.4",
    "langgraph-prebuilt==0.7.0a1",
    "langgraph-sdk>=0.1.72",
    "langsmith>=0.4.5",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "tavily-python>=0.7.9",
    "tiktoken>=0.11.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
